<resources>
    <string name="app_name" translatable="false">Fly Now</string>


    <string-array name="ticket_plan_array">
        <item>@string/economy</item>
        <item>@string/economy_premium</item>
        <item>@string/business</item>
        <item>@string/first</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="economy">Οικονομική</string>
    <string name="economy_premium">Οικονομική προνομιακή</string>
    <string name="business">Επαγγελματική</string>
    <string name="first">Πρώτη</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="passenger_selection_title">Επιλογή επιβατών</string>
    <string name="from">Από</string>
    <string name="To">Πρός</string>
    <string name="directflightswitch">ΑΠΕΥΘΕΙΑΣ ΠΤΗΣΕΙΣ ΜΟΝΟ</string>
    <string name="departureDate">Ημερομηνία Αναχώρησης</string>
    <string name="arrivalDate">Ημερομηνία Επιστροφής</string>
    <string name="passengers_initial">1 Επιβάτης</string>
    <string name="passengers_plurar"> Επιβάτες</string>
    <string name="passengers_single"> Επιβάτης</string>
    <string name="searchflightsbtn">Αναζήτηση Πτήσεων</string>
    <string name="searchtextforairports">Αναζήτηση...</string>
    <string name="confirmbtn">Επιβεβαίωση</string>
    <string name="stops" translatable="false">"STOP :"</string>
    <string name="search_toast_empty">Παρακαλώ εισάγετε δεδομένα πρώτα</string>
    <string name="search_toast_same">Δεν μπορείτε να βάλετε το ίδιο αεροδρόμιο.</string>
    <string name="pleaseWait">Παρακαλούμε περιμένετε</string>
    <string name="bestpricesText">Αναζητούμε τις καλύτερες τιμές...</string>
    <string name="notAvailableTickets">Δεν υπάρχουν διαθέσιμα εισιτήρια.</string>
    <string name="multiAirlines">ΣΥΝΔΥΑΣΜΟΣ ΕΤΑΙΡΙΩΝ</string>
    <string name="loadingYourData">Φορτώνουμε τα δεδομένα που ζητήσατε.</string>
    <string name="nearAirports">Αεροδρόμια κοντά σας</string>
    <string name="departTitle">Πρόγραμμα Αναχώρησης</string>
    <string name="acceotGPSPermission">Για την δική σας καλύτερη εξυπηρέτηση δεχτείτε την άδεια τοποθεσίας.</string>
    <string name="totalDuration">Συνολική διάρκεια :</string>
    <string name="standbyDuration">"Διάρκεια Αναμονής : "</string>
    <string name="thanksforpurchase">Ευχαριστούμε για την αγορά σας.</string>
    <string name="chooseDepartDateFirst">Παρακαλώ επιλέξτε πρώτα ημερομηνία αναχώρησης.</string>
    <string name="clicktobuyString">Κάνε κράτηση : </string>
    <string name="day">" ημέρα "</string>
    <string name="days">" ημέρες "</string>
    <string name="hour">" ώρα "</string>
    <string name="hours">" ώρες "</string>
    <string name="minute">" λεπτό "</string>
    <string name="minutes">" λεπτά "</string>
    <string name="nav_tickets">Εισιτήρια</string>
    <string name="nav_info">Πληροφορίες</string>
    <string name="nav_preferences">Ρυθμίσεις</string>
    <string name="nav_topflights">Top πτήσεις</string>
    <string name="app">Εφαρμογή</string>
    <string name="underConstruction">" είναι υπό κατασκευή..."</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="technicalError">Υπήρχε κάποιο τεχνικό πρόβλημα, παρακαλώ προσπαθήστε ξανά αργότερα.</string>
    <string name="flights">Πτήσεις</string>
    <string name="travelers">Επιβάτες</string>
</resources>
