<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_search"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="@string/nav_tickets" />
        <item
            android:id="@+id/nav_checkin"
            android:icon="@android:drawable/ic_menu_send"
            android:title="e-Check in" />
        <item
            android:id="@+id/nav_topdestinations"
            android:icon="@android:drawable/ic_menu_mapmode"
            android:title="@string/nav_topflights" />
    </group>

    <item android:title="@string/app">
        <menu>
            <item
                android:id="@+id/nav_preferences"
                android:icon="@android:drawable/ic_menu_preferences"
                android:title="@string/nav_preferences" />
            <item
                android:id="@+id/nav_info"
                android:icon="@android:drawable/ic_menu_info_details"
                android:title="@string/nav_info" />
        </menu>
    </item>

</menu>
